src/components/modal-gallery.scss
/*
 The MIT License (MIT)

 Copyright (c) 2017 Stefano Cappa (Ks89)
 Copyright (c) 2016 vimalavinisha

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */

.ng-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.8);
  /*opacity: 0.85;*/
  z-index: 9999;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-drag: none;
}

.ng-gallery-content {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10000;
  text-align: center;

  > a {
    &.nav-left,
    &.nav-right {
      color: #fff !important;
      text-decoration: none;
      font-size: 60px;
      cursor: pointer;
      outline: none;
    }

    &.nav-left {
      position: fixed;
      left: 15px;
      top: 50%;
      transform: translateY(-50%);
    }

    &.nav-right {
      position: fixed;
      right: 15px;
      top: 50%;
      transform: translateY(-50%);
    }
  }

  > img {
    height: auto;
    max-height: calc(100% - 150px);
    max-width: calc(100% - 100px);
    position: relative;
    display: block;
    margin: 0 auto 0 auto;
    top: 50%;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    cursor: pointer;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-user-drag: none;
  }

  &.effect {
    animation: fadeIn 0.5s;
  }

  > span {
    &.info-text {
      color: #fff;
      display: inline-block;
      width: 100%;
      height: 20px;
      font-weight: bold;
      text-align: center;
      position: fixed;
      left: 0;
      right: 0;
      padding-top: 30px;
      //bottom: 100px;
    }
  }

  > .ng-thumbnails-wrapper {
    width: 400px;
    height: 70px;
    text-align: center;
    position: fixed;
    bottom: 20px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    overflow-x: hidden;

    > .ng-thumbnails {
      width: 4000px;
      height: 70px;

      > div {
        > img {
          width: auto;
          height: 70px;
          float: left;
          margin-right: 10px;
          cursor: pointer;
          opacity: 0.6;

          &:hover,
          &.active {
            transition: opacity 0.25s ease;
            opacity: 1;
          }
        }
      }
    }
  }
}

@keyframes fadeIn {
    from { opacity: 0.3; }
      to { opacity: 1; }
}

/* Loading - from http://loading.io */
uiload {
  display: inline-block;
  position: relative;

  > div {
    position: relative;
  }
}

@-webkit-keyframes uil-ring-anim {
  0% {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@-moz-keyframes uil-ring-anim {
  0% {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
    }
}

@-ms-keyframes uil-ring-anim {
  0% {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes uil-ring-anim {
  0% {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.uil-ring-css {
  background: none;
  position: relative;
  top: 0;
  margin: 180px auto 0 auto;
  width: 100px;
  height: 100px;

  > div {
    position: absolute;
    display: block;
    width: 80px;
    height: 80px;
    top: 20px;
    left: 20px;
    border-radius: 40px;
    box-shadow: 0 6px 0 0 #fff;
    -ms-animation: uil-ring-anim 1s linear infinite;
    -moz-animation: uil-ring-anim 1s linear infinite;
    -webkit-animation: uil-ring-anim 1s linear infinite;
    -o-animation: uil-ring-anim 1s linear infinite;
    animation: uil-ring-anim 1s linear infinite;
  }
}

